[gd_scene load_steps=4 format=3 uid="uid://c4kg4q8jhrk8t"]

[ext_resource type="Script" path="res://Game/card.gd" id="1_u7aei"]
[ext_resource type="Theme" uid="uid://b68l0wy52kmlk" path="res://UI/card_theme.tres" id="2_40i7p"]
[ext_resource type="Texture2D" uid="uid://cxl7x01m3550o" path="res://icon.svg" id="3_riwj2"]

[node name="root_card" type="Node2D"]
script = ExtResource("1_u7aei")

[node name="color_rect" type="ColorRect" parent="."]
offset_right = 300.0
offset_bottom = 420.0
color = Color(0.98, 0.98, 0.98, 1)

[node name="control_parent" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 300.0
offset_bottom = 420.0
theme = ExtResource("2_40i7p")

[node name="name_label" type="Label" parent="control_parent"]
layout_mode = 0
offset_top = 200.0
offset_right = 300.0
offset_bottom = 230.0
theme = ExtResource("2_40i7p")
text = "name - type"
horizontal_alignment = 1

[node name="body_label" type="RichTextLabel" parent="control_parent"]
layout_mode = 0
offset_left = 8.0
offset_top = 248.0
offset_right = 292.0
offset_bottom = 412.0
bbcode_enabled = true
text = "text body lmao"

[node name="image" type="Sprite2D" parent="."]
scale = Vector2(2.34375, 1.5)
texture = ExtResource("3_riwj2")
centered = false

[connection signal="mouse_entered" from="control_parent" to="." method="_on_control_parent_mouse_entered"]
[connection signal="mouse_exited" from="control_parent" to="." method="_on_control_parent_mouse_exited"]
